--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>EngTop – English Speaking Topics</title>
-
+<meta name="google-site-verification" content="FSJV9nwXth1r6w79a29V4G90cBvXvWiZ7i6cxKNjdUY" />
   <meta name="description" content="EngTop English Speaking Topics — 100 topics (10 questions each) to practice speaking English daily." />
   <meta name="keywords" content="english speaking, speaking practice, conversation topics, english topics, learn english, speaking questions" />
   <meta name="author" content="PinkElephant1" />
